<resources>
    <string name="app_name">tutorTeacher</string>
    <string name="action_settings">Settings</string>
    <string name="email">Correo</string>
    <string name="password">Contraseña</string>
    <string name="login">Iniciar Sesión</string>
    <string name="singup">Registrar</string>
    <string name="error_empty_email">Ingresar email</string>
    <string name="error_empty_password">Ingresar contraseña</string>
    <string name="registering_user">Registrando usuario...</string>
    <string name="registered_succ">¡Registro exitoso!</string>
    <string name="error_registered">Error al intentar registrar. Volver a intentar</string>
    <string name="sexMan">Hombre</string>
    <string name="SexWoman">Mujer</string>
    <string name="name">Nombre</string>
    <string name="error_empty_name">Ingresar nombre</string>
    <string name="select_image">Selecciona una imagen</string>
    <string name="fail_upload_profile">Error al subir imagen</string>
    <string name="sex">Sexo</string>
    <string name="city">Ciudad</string>
    <string name="barranquilla">Barranquilla</string>
    <string name="bogota">Bogotá</string>
    <string name="medellin">Medellín</string>
    <string-array name="list_city">
        <item>@string/barranquilla</item>
        <item>@string/bogota</item>
        <item>@string/medellin</item>
    </string-array>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="logout">Cerrar sesión</string>
    <string name="error_login">Error al inicar sesión</string>
    <string name="topics">Topicos</string>
    <string name="math">Matemáticas</string>
    <string name="english">Inglés</string>
    <string name="music">Música</string>
    <string name="history">Historia</string>
    <string name="error_topics">Selecciona uno de los topicos</string>
    <string name="reservation">Reservación</string>
    <string name="comment">Comentario</string>
    <string name="accept">Aceptar</string>
    <string name="discard">Rechazar</string>
    <string name="rechazar">Rechazar</string>
    <string name="positivo">SÍ</string>
    <string name="negativo">NO</string>
    <string name="pregunta_eliminacion">¿Está seguro que desea rechazar a este estudiante?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>

