<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="center_vertical|center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SingupActivity">

    <LinearLayout

        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:id="@+id/linearLayout">


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgProfile"
            android:layout_width="104dp"
            android:layout_margin="15dp"
            android:layout_height="104dp"
            android:src="@drawable/profile" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="300dp"
            android:layout_marginBottom="15dp"
            android:layout_height="match_parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/city" />

        <Spinner
            android:id="@+id/spnCity"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp" />

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/sex" />

        <RadioGroup
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="15dp"
            android:checkedButton="@+id/man"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/man"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sexMan" />

            <RadioButton
                android:id="@+id/woman"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/SexWoman" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/topics"
            android:textAlignment="viewStart" />

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/checkMath"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/math" />

                <CheckBox
                    android:id="@+id/checkMusic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/music" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/checkEnglish"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/english" />

                <CheckBox
                    android:id="@+id/checkHistory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/history" />
            </LinearLayout>

        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="300dp"
            android:layout_marginBottom="15dp"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txtEmail"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="300dp"
            android:layout_marginBottom="15dp"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:inputType="textPassword"
                android:id="@+id/txtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/button2"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:onClick="singup"
            android:text="@string/singup" />



    </LinearLayout>

</RelativeLayout>
