<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="center_vertical|center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.clases.carlosponton.tutorteacher.MainActivity">

    <LinearLayout

        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:id="@+id/linearLayout">


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgFoto"
            android:layout_width="104dp"
            android:layout_height="104dp"
            android:layout_margin="15dp"
            android:src="@drawable/tutor" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="300dp"
            android:layout_marginBottom="15dp"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txtEmail"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="300dp"
            android:layout_marginBottom="15dp"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:inputType="textPassword"
                android:id="@+id/txtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/button2"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:onClick="login"
            android:text="@string/login" />

        <TextView
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/singup"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>